# mbview-rs

./: .eslintrc.cjs  .gitignore  .npmrc  .versionrc.cjs  .versionrc.js  .yarnrc.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  buildSass.mjs  package.json  pnpm-lock.yaml  postcss.config.js  tauriVersioner.cjs  tsconfig.eslint.json  tsconfig.json  vite.config.js
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: build.yml  release.yml
resources/styles/: basic.json  darkmatter.json  streets.json  terrain.json
src/: App.svelte  Menu.svelte  carbon.css  carbon.scss  global.css  index.html  main.ts  references.d.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  main.rs  server.rs  service.rs  tiles.rs  utils.rs
src/components/: App.svelte  ContextMenu.svelte  ContextMenuOption.svelte  Map.d.ts  MapPopup.svelte  Menu.svelte  PopupProperty.svelte  ScaleControl.ts
src/fonts/: _mono.scss  _sans.scss
src/i18n/: en.json  fr.json
src/types/: index.d.ts
