[package]
name = "MBTilesViewer"
version = "1.7.0"
description = "MBtiles viewer and inspector"
authors = [ "dev@akylasfr" ]
license = "MIT"
repository = "https://github.com/farfromrefug/mbview"
default-run = "MBTilesViewer"
edition = "2018"
build = "src/build.rs"
include = [ "**/*.rs" ]

[build-dependencies]
tauri-build = { version = "1.2.1", features = [ ] }

[dependencies]
r2d2 = "0.8"
r2d2_sqlite = "0.21.0"
flate2 = "1.0"
regex = "1.7"
lazy_static = "1.4"
serde_json = "1.0"
md5 = "0.7"
libsqlite3-sys = "0.25"
hotwatch = "0.4"
tokio = { version = "1.23", features = [ "full" ] }
hyper = { version = "0.14", features = [ "server", "http1", "http2", "tcp" ] }
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.2.2", features = [ "api-all" ] }
tauri-plugin-window-state = "0.1"

  [dependencies.rusqlite]
  version = "0.28"
  features = [ "bundled" ]

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
