[package]
name = "MBTilesViewer"
version = "1.7.2"
description = "MBtiles viewer and inspector"
authors = [ "dev@akylasfr" ]
license = "MIT"
repository = "https://github.com/farfromrefug/mbview"
default-run = "MBTilesViewer"
edition = "2018"
build = "src/build.rs"
include = [ "**/*.rs" ]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.18", features = [ ] }

[dependencies]
r2d2 = "0.8"
r2d2_sqlite = "0.24.0"
flate2 = "1.0"
regex = "1.9"
lazy_static = "1.4"
serde_json = "1.0"
md5 = "0.7"
libsqlite3-sys = "0.28.0"
http-body-util = "0.1.1"
bytes = "1.5.0"
hyper-util = "0.1.3"
hotwatch = "0.5"
tokio = { version = "1.32", features = [ "full" ] }
hyper = { version = "1.1.0", features = [ "server", "http1", "http2" ] }
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "2.0.0-beta.23", features = [ "protocol-asset" ] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", version = "2.0.0-beta.10", branch = "v2" }
tauri-plugin-dialog = { git = "https://github.com/tauri-apps/plugins-workspace", version = "2.0.0-beta.10", branch = "v2" }
tauri-plugin-fs = { git = "https://github.com/tauri-apps/plugins-workspace", version = "2.0.0-beta.10", branch = "v2" }
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", version = "2.0.0-beta.8", branch = "v2" }
tauri-plugin-clipboard-manager = { git = "https://github.com/tauri-apps/plugins-workspace", version = "2.1.0-beta.5", branch = "v2" }

  [dependencies.rusqlite]
  version = "0.31.0"
  features = [ "bundled" ]

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
